[package]
name = "clmul"
version = "0.5.2"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/apps4uco/clmul"
documentation = "https://docs.rs/clmul"
keywords = ["clmul", "morton", "intrinsic"]
categories=["algorithms","encoding","hardware-support","mathematics","no-std"]
#rust-version = "1.70"
description="Carry-less multiply for Rust, internally uses compiler intrinsics, with fallback if the CPU has no clmul instruction"

[dependencies]

[features]
default=[]
morton=[]
transpose=[]
clmul_inv=[]

[dev-dependencies]
criterion = "0.8.0"
dilate = "0.6.3"
insides = "0.1.2"
morton = "0.3.0"
morton-encoding = "2.0.1"
morton-index = "0.3.0"
zorder = "0.2.2"

[[bench]]
name = "benchmark"
harness = false
required-features = ["morton"]
