[package]
name = "clmul"
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/apps4uco/clmul"
documentation = "https://docs.rs/clmul"
keywords = ["clmul", "math", "logic", "bits", "intrinsic"]
categories=["algorithms","encoding","hardware-support","mathematics","no-std"]
#rust-version = "1.70"
description="Carry-less multiply for Rust, internally uses compiler intrinsics, with fallback if the CPU has no clmul instruction"

[dependencies]
core_detect = "1.0.0"

[features]
default=[]

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "benchmark"
harness = false
